Removing some junk from the "print" version of the site, particularly for printing the "cart". And Fixing print.css for overlap issues.
git-svn-id: svn://vufind-dev/VuFind-PlusProd/trunk@617 28506cad-9c98-f24e-950d-e205d8e2a2e8

--- a/vufind/web/interface/themes/default/css/print.css
+++ b/vufind/web/interface/themes/default/css/print.css
@@ -134,19 +134,16 @@ width: 90px; /*Width of each panel holding each content. If removed, widths shou
 	display:none !important;
 }
 
-#sidebar{
-  display: none;
-}
 #main-content{
   width: 925px !important;
 }
 .resultDetails{
   width: 615px !important;
 }
-#searchResultTopTools, #formatCategories{
-  display: none;
-}
 
-#list-recommended{
+#list-recommended, #book_bag, #searchResultTopTools, #formatCategories, #sidebar, #searchInfo{
 	display: none;
+}
+.holdingsSummary {
+    min-height: 5.5em !important;
 }
